# albedo-radiative-forcing

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: lint.yml  publish.yml  test.yml
notebooks/: demo.ipynb
src/: __init__.py  albedo.py  forcing.py  model.py  validation.py
tests/: __init__.py  test_albedo.py  test_forcing.py  test_model.py  test_validation.py
